# stampfly_rtos_skelton

./: .gitignore  CMakeLists.txt  LICENSE  partitions.csv  project.md  sdkconfig.defaults
components/sf_algo_eskf/include/: eskf.hpp
components/sf_algo_filter/: filter.cpp
components/sf_algo_filter/include/: filter.hpp
components/sf_algo_fusion/: CMakeLists.txt  README.md  sensor_fusion.cpp
components/sf_algo_fusion/include/: sensor_fusion.hpp
components/sf_algo_pid/: pid.cpp
components/sf_hal_bmi270/: README.md
components/sf_hal_bmi270/docs/: bmi270_configfile.c
components/sf_hal_bmi270/include/: bmi270_config_file.h  bmi270_defs.h  bmi270_init.h  bmi270_types.h
components/sf_hal_bmi270/src/: bmi270_data.c  bmi270_spi.c
components/sf_hal_bmm150/include/: mag_calibration.hpp
components/sf_hal_bmp280/: CMakeLists.txt  bmp280.cpp
components/sf_hal_bmp280/include/: bmp280.hpp
components/sf_hal_button/: CMakeLists.txt  button.cpp
components/sf_hal_led/: CMakeLists.txt  led.cpp
components/sf_hal_led/include/: led.hpp
components/sf_hal_motor/: CMakeLists.txt  motor_driver.cpp
components/sf_hal_motor/include/: motor_driver.hpp
components/sf_hal_pmw3901/: .gitignore  CMakeLists.txt
components/sf_hal_pmw3901/include/: pmw3901.h  (+2 more)
components/sf_hal_power/: CMakeLists.txt  power_monitor.cpp
components/sf_hal_vl53l3cx/: CMakeLists.txt
components/sf_svc_cli/: CMakeLists.txt  cli.cpp
components/sf_svc_cli/include/: cli.hpp
components/sf_svc_health/: CMakeLists.txt  sensor_health.cpp
components/sf_svc_led/: CMakeLists.txt  led_manager.cpp
components/sf_svc_state/: CMakeLists.txt  stampfly_state.cpp
components/sf_svc_telemetry/: CMakeLists.txt
components/stampfly_baro/: CMakeLists.txt  bmp280.cpp
components/stampfly_button/: CMakeLists.txt  button.cpp
components/stampfly_buzzer/: CMakeLists.txt  buzzer.cpp
components/stampfly_cli/: CMakeLists.txt  cli.cpp
components/stampfly_comm/: CMakeLists.txt  controller_comm.cpp
components/stampfly_eskf/: CMakeLists.txt  eskf.cpp
components/stampfly_filter/: CMakeLists.txt
components/stampfly_imu/: .gitignore  CMakeLists.txt  bmi270_wrapper.cpp
components/stampfly_imu/docs/: API.md  M5StamFly_spec_ja.md  bmi270_doc_ja.md  esp_idf_bmi270_spi_guide.md
components/stampfly_imu/examples/basic_fifo/: CMakeLists.txt  README.md
components/stampfly_imu/examples/basic_interrupt/: CMakeLists.txt  README.md
components/stampfly_imu/examples/basic_polling/: CMakeLists.txt  README.md
components/stampfly_imu/examples/development/stage1_spi_basic/: CMakeLists.txt  README.md
components/stampfly_imu/examples/development/stage2_init/main/: main.c
components/stampfly_imu/examples/development/stage3_polling/main/: main.c
components/stampfly_imu/examples/development/stage4_interrupt/: CMakeLists.txt  README.md
components/stampfly_imu/examples/development/stage5_fifo/step1_basic_read/main/: main.c
components/stampfly_imu/examples/development/stage5_fifo/step2_multi_frames/: README.md
components/stampfly_imu/examples/development/stage5_fifo/step3_flush/: CMakeLists.txt
components/stampfly_imu/examples/development/stage5_fifo/step3_flush/main/: main.c
components/stampfly_imu/examples/development/stage5_fifo/step4_watermark_int/: CMakeLists.txt
components/stampfly_imu/include/: bmi270_config.hpp  bmi270_data.h  bmi270_interrupt.h  bmi270_spi.h  bmi270_wrapper.hpp
components/stampfly_imu/src/: bmi270_config_file.c  bmi270_init.c  bmi270_interrupt.c  bmi270_spi.c  bmi270_wrapper.cpp
components/stampfly_led/: CMakeLists.txt  led.cpp
components/stampfly_logger/: CMakeLists.txt  logger.cpp
components/stampfly_mag/: CMakeLists.txt  bmm150.cpp  mag_calibration.cpp
components/stampfly_motor/: CMakeLists.txt  motor_driver.cpp
components/stampfly_opticalflow/: CLAUDE.md  CMakeLists.txt  README.md  pmw3901_wrapper.cpp
components/stampfly_pid/: CMakeLists.txt  pid.cpp
components/stampfly_power/: CMakeLists.txt  power_monitor.cpp
components/stampfly_state/: CMakeLists.txt  stampfly_state.cpp  system_manager.cpp
components/stampfly_telemetry/: CMakeLists.txt  telemetry.cpp
components/stampfly_tof/: CMakeLists.txt  vl53l3cx_wrapper.cpp
docs/: PROGRESS.md  SPI_IMPLEMENTATION.md  auto_calibration_design.md  developer_guide.md  eskf_accel_yaw_coupling.md  eskf_bias_estimation.md  eskf_debug_plan.md  eskf_sensor_health.md  eskf_simulation_matching.md  eskf_workflow.md  freertos_basics.md  grid_search_optimization.md  implementation_plan.md  led_architecture_proposal.md  led_display.md  multitask_faq.md  pid_control.md  realtime_considerations.md  refactoring_plan.md  simulated_annealing.md  telemetry_debug_log.md  telemetry_design.md  telemetry_web_guide.md
docs/design/: logger_component_design.md
main/: CMakeLists.txt  config.hpp  globals.cpp  globals.hpp  hardware_config.hpp  init.cpp  init.hpp  main.cpp  rate_controller.hpp
main/tasks/: baro_task.cpp  button_task.cpp  cli_task.cpp  comm_task.cpp  control_task.cpp  imu_task.cpp  led_task.cpp  mag_task.cpp  optflow_task.cpp  power_task.cpp  tasks.cpp  tasks.hpp  tasks_common.hpp  telemetry_task.cpp  tof_task.cpp
tools/eskf_debug/: CMakeLists.txt  analyze_flow_test.py  eskf_pc.cpp  eskf_test.cpp  latest_pc_vs_device.csv  main.cpp  optimize_params.py  replay.cpp  tune_params.py
tools/eskf_debug/archive/2024-12-01_analysis/: static_test7_pc.csv  static_test8_fixed_flow_noise.csv  static_test8_flow_change.csv  static_test8_no_smooth.csv  static_test8_smoothed.csv  static_test8_with_bias.csv  static_test_smoothed.csv
tools/eskf_debug/docs/: flow_calibration_plan.md
tools/eskf_debug/stubs/: esp_err.h  esp_log.h
tools/logs/: test_400hz_result.csv
tools/pid_test/: CMakeLists.txt  pid_test.cpp
tools/scripts/: README.md  estimate_qr.py  log_capture.py  optimize_eskf.py  plot_mag_xy.py  pure_accel_integration.py  qr_params.json  requirements.txt  visualize_device_log.py  visualize_eskf.py  visualize_optimization.py  visualize_pose_3d.py  viz_all.py  viz_attitude.py  viz_compare.py  viz_position.py  viz_sensors.py
(+77 files in other folders)
